# Naive_Bayes_2018

./: .gitignore  CMakeLists.txt  README.md
data/: probabilityone.txt  probabilityzero.txt
h_files/: classification.h  pretraining.h  training.h
src/: classification.cpp  main.cpp  pretraining.cpp  training.cpp
test/: classificationtest.cpp  pretrainingtest.cpp  trainingtest.cpp
